--- a/index.html
+++ b/index.html
@@ -8,59 +8,87 @@
     <body>
         <div id="navbar">
             <nav>
-                <div>
-                    <img src="" alt="">
+                <div id="myname">
                     <span>Federico Guidazzi</span>
                 </div>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Projects</a>
-                <a href="">Contacts</a>
+                <div id="links">
+                    <a href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#contacts">Contacts</a>
+                </div>
+                <div id="#dropdown">
+                    <img src="https://d33wubrfki0l68.cloudfront.net/79e75114856ae61628d2ad26504e3ff4ab2c71b6/f06a4/assets/svg/ham-menu.svg" alt="dropdown icon">
+                </div>
             </nav>
         </div>
-        <div>
-            <h1>Hi, I'm Federico Guidazzi</h1>
-            <p>Che lavoro faccio e che qulifiche ho</p>
-        </div>
-        <div>
-            <h2>About</h2>
-            <p>chi sono e cosa mi piace fare</p>
-            <div>
-                <h3>
-                    Skills
-                </h3>
-                <ul>
-                    <li>lista</li>
-                    <li>delle</li>
-                    <li>skills</li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <h2>Projects</h2>
+        <div id="dropdownItems">
             <ul>
-                <li>
-                    <h1>___________________Possibile link al progetto(github o demo)</h1>
-                    <div class="project">
-                        <img src="" alt="">
-                        <h3>titolo progetto</h3>
-                        <p>breve descrizione del progetto</p>
-                    </div>
-                </li>
-                <li>
-                    <h1>___________________Possibile link al progetto(github o demo)</h1>
-                    <div class="project">
-                        <img src="" alt="">
-                        <h3>titolo progetto</h3>
-                        <p>breve descrizione del progetto</p>
-                    </div>
-                </li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </div>
+        <div id="body">
+            <div id="home">
+                <h1>Hi, I'm Federico Guidazzi</h1>
+                <p>I'm a software engineer, with passion for coding and almost all the tech world.</p>
+                <p>Currently I work as Software Engineer at GFT.</p>
+            </div>
+            <div id="about">
+                <h2>About</h2>
+                <p>chi sono e cosa mi piace fare</p>
+                <div>
+                    <h3>
+                        Skills
+                    </h3>
+                    <ul>
+                        <li>lista</li>
+                        <li>delle</li>
+                        <li>skills</li>
+                    </ul>
+                </div>
+            </div>
+            <div id="projects">
+                <h2>Projects</h2>
+                <ul>
+                    <li>
+                        <h1>___________________Possibile link al progetto(github o demo)</h1>
+                        <div class="project">
+                            <img src="" alt="">
+                            <h3>titolo progetto</h3>
+                            <p>breve descrizione del progetto</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h1>___________________Possibile link al progetto(github o demo)</h1>
+                        <div class="project">
+                            <img src="" alt="">
+                            <h3>titolo progetto</h3>
+                            <p>breve descrizione del progetto</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div id="contacts">
+                <h2>Contacs</h2>
+                <p>Puoi scrivermi su i social networks</p>
+                <p>form per mandare direttamente una mail dal sito</p>
+            </div>
+    </div>
+    <footer>
         <div>
-            <h2>Contacs</h2>
-            <p>Puoi scrivermi su i social networks</p>
-            <p>form per mandare direttamente una mail dal sito</p>
+            <h3>Federico Guidazzi</h3>
+            <p>Ciao sono io</p>
         </div>
+        <div>
+            <h3>Social</h3>
+            <ul>
+                <li>Linkedin</li>
+                <li>Github</li>
+            </ul>
+        </div>
+    </footer>
     </body>
 </html>
