--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Federico Guidazzi | Software Engineer</title>
         <meta charset="UTF-8">
+        <link rel="icon" href="./resources/foto.jpeg">
         <link rel="stylesheet" href="style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -10,12 +11,18 @@
         <script src="./javascript.js"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+        <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary fixed-top py-0">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Federico Guidazzi</a>
+                <div class="d-flex justify-content-between py-3 col-12 col-lg-5">
+                <div class="d-flex align-items-center">
+                    <img class="logoImage" src="./resources/foto.jpeg" alt="">
+                    <a class="navbar-brand" href="#">Federico Guidazzi</a>
+                </div>
+              
               <button class="navbar-toggler border-0 shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <img class="dropdownIcon" src="./resources/list.svg" alt="">
               </button>
+            </div>
               <div class="collapse navbar-collapse flex-grow-0 col-lg-5" id="navbarText">
                 <ul class="navbar-nav me-0 mb-2 mb-lg-0 justify-content-lg-between col-12">
                   <li class="nav-item">
@@ -36,51 +43,64 @@
           </nav>
         
         <div id="body">
-            <div id="home">
-                <h1>Hi, I'm Federico Guidazzi</h1>
-                <p>I'm a software engineer, with passion for coding and almost all the tech world.</p>
-                <p>Currently I work as Software Engineer at GFT.</p>
-            </div>
-            <div id="about">
-                <h2>About</h2>
-                <p>chi sono e cosa mi piace fare</p>
+            <section id="home">
                 <div>
-                    <h3>
-                        Skills
-                    </h3>
+                    <h1>Hi, I'm Federico Guidazzi</h1>
+                    <p>I'm a software engineer, with passion for coding and almost all the tech world.</p>
+                    <p>Currently I work as Software Engineer at GFT.</p>
+                    <div class="arrow">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </section>
+            <section id="about">
+                <div>
+                    <h2>About</h2>
+                    <p>chi sono e cosa mi piace fare</p>
+                    <div>
+                        <h3>
+                            Skills
+                        </h3>
+                        <ul>
+                            <li>lista</li>
+                            <li>delle</li>
+                            <li>skills</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section id="projects">
+                <div>
+                    <h2>Projects</h2>
                     <ul>
-                        <li>lista</li>
-                        <li>delle</li>
-                        <li>skills</li>
+                        <li>
+                            <h1>___________________Possibile link al progetto(github o demo)</h1>
+                            <div class="project">
+                                <img src="" alt="">
+                                <h3>titolo progetto</h3>
+                                <p>breve descrizione del progetto</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h1>___________________Possibile link al progetto(github o demo)</h1>
+                            <div class="project">
+                                <img src="" alt="">
+                                <h3>titolo progetto</h3>
+                                <p>breve descrizione del progetto</p>
+                            </div>
+                        </li>
                     </ul>
                 </div>
-            </div>
-            <div id="projects">
-                <h2>Projects</h2>
-                <ul>
-                    <li>
-                        <h1>___________________Possibile link al progetto(github o demo)</h1>
-                        <div class="project">
-                            <img src="" alt="">
-                            <h3>titolo progetto</h3>
-                            <p>breve descrizione del progetto</p>
-                        </div>
-                    </li>
-                    <li>
-                        <h1>___________________Possibile link al progetto(github o demo)</h1>
-                        <div class="project">
-                            <img src="" alt="">
-                            <h3>titolo progetto</h3>
-                            <p>breve descrizione del progetto</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div id="contacts">
-                <h2>Contacs</h2>
-                <p>Puoi scrivermi su i social networks</p>
-                <p>form per mandare direttamente una mail dal sito</p>
-            </div>
+            </section>
+            <section id="contacts">
+                <div>
+                    <h2>Contacs</h2>
+                    <p>Puoi scrivermi su i social networks</p>
+                    <p>form per mandare direttamente una mail dal sito</p>
+                </div>
+            </section>
     </div>
     <footer>
         <div>
