Add the possibility to change language to the website

--- a/index.html
+++ b/index.html
@@ -23,19 +23,28 @@
                 <img class="dropdownIcon" src="./resources/list.svg" alt="">
               </button>
             </div>
-              <div class="collapse navbar-collapse flex-grow-0 col-lg-5" id="navbarText">
-                <ul class="navbar-nav me-0 mb-2 mb-lg-0 justify-content-lg-between col-12">
+              <div class="collapse navbar-collapse flex-grow-0 col-lg-6" id="navbarText">
+                <ul class="navbar-nav me-0 mb-2 mb-lg-0 justify-content-lg-between col-12 flex-wrap">
+                    <li class="nav-item dropdown">
+                        <div class="nav-link dropdown-toggle template" id="Language" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            
+                        </div>
+                        <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="Language">
+                          <li class="dropdown-item template" id="Italian"></li>
+                          <li class="dropdown-item template" id="English"></li>
+                        </ul>
+                    </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#home">Home</a>
+                    <a class="nav-link template" href="#home" id="Home"></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link template" href="#about" id="About"></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
+                    <a class="nav-link template" href="#projects" id="Projects"></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#contacts">Contacts</a>
+                    <a class="nav-link template" href="#contacts" id="Contacts"></a>
                   </li>
                 </ul>
               </div>
@@ -45,9 +54,9 @@
         <div id="body">
             <section id="home">
                 <div>
-                    <h1>Hi, I'm Federico Guidazzi</h1>
-                    <p>I'm a software engineer, with passion for coding and almost all the tech world.</p>
-                    <p>Currently I work as Software Engineer at GFT.</p>
+                    <h1 class="template">Hi, I'm Federico Guidazzi</h1>
+                    <p class="template">I'm a software engineer, with passion for coding and almost all the tech world.</p>
+                    <p class="template">Currently I work as Software Engineer at GFT.</p>
                     <div class="arrow">
                         <span></span>
                         <span></span>
@@ -57,38 +66,38 @@
             </section>
             <section id="about">
                 <div>
-                    <h2>About</h2>
-                    <p>chi sono e cosa mi piace fare</p>
+                    <h2 class="template">About</h2>
+                    <p class="template">chi sono e cosa mi piace fare</p>
                     <div>
-                        <h3>
+                        <h3 class="template">
                             Skills
                         </h3>
                         <ul>
-                            <li>lista</li>
-                            <li>delle</li>
-                            <li>skills</li>
+                            <li class="template">lista</li>
+                            <li class="template">delle</li>
+                            <li class="template">skills</li>
                         </ul>
                     </div>
                 </div>
             </section>
             <section id="projects">
                 <div>
-                    <h2>Projects</h2>
+                    <h2 class="template">Projects</h2>
                     <ul>
                         <li>
-                            <h1>___________________Possibile link al progetto(github o demo)</h1>
+                            <h1 class="template">___________________Possibile link al progetto(github o demo)</h1>
                             <div class="project">
                                 <img src="" alt="">
-                                <h3>titolo progetto</h3>
-                                <p>breve descrizione del progetto</p>
+                                <h3 class="template">titolo progetto</h3>
+                                <p class="template">breve descrizione del progetto</p>
                             </div>
                         </li>
                         <li>
-                            <h1>___________________Possibile link al progetto(github o demo)</h1>
+                            <h1 class="template">___________________Possibile link al progetto(github o demo)</h1>
                             <div class="project">
                                 <img src="" alt="">
-                                <h3>titolo progetto</h3>
-                                <p>breve descrizione del progetto</p>
+                                <h3 class="template">titolo progetto</h3>
+                                <p class="template">breve descrizione del progetto</p>
                             </div>
                         </li>
                     </ul>
@@ -96,19 +105,19 @@
             </section>
             <section id="contacts">
                 <div>
-                    <h2>Contacs</h2>
-                    <p>Puoi scrivermi su i social networks</p>
-                    <p>form per mandare direttamente una mail dal sito</p>
+                    <h2 class="template">Contacs</h2>
+                    <p class="template">Puoi scrivermi su i social networks</p>
+                    <p class="template">form per mandare direttamente una mail dal sito</p>
                 </div>
             </section>
     </div>
     <footer>
         <div>
             <h3>Federico Guidazzi</h3>
-            <p>Ciao sono io</p>
+            <p class="template">Ciao sono io</p>
         </div>
         <div>
-            <h3>Social</h3>
+            <h3 class="template">Social</h3>
             <ul>
                 <li>Linkedin</li>
                 <li>Github</li>
