add navbar animation on scrolling

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
           </nav>
         
         <div id="body">
-            <section id="home">
+            <section id="home" class="nascosto">
                 <div>
-                    <h1 class="template">Hi, I'm Federico Guidazzi</h1>
-                    <p class="template">I'm a software engineer, with passion for coding and almost all the tech world.</p>
-                    <p class="template">Currently I work as Software Engineer at GFT.</p>
+                    <h1 class="template" id="Hi"></h1>
+                    <p class="template" id="Intro"></p>
+                    <p class="template" id="Intro2"></p>
                     <div class="arrow">
                         <span></span>
                         <span></span>
@@ -64,10 +64,10 @@
                     </div>
                 </div>
             </section>
-            <section id="about">
+            <section id="about" class="nascosto">
                 <div>
-                    <h2 class="template">About</h2>
-                    <p class="template">chi sono e cosa mi piace fare</p>
+                    <h2 class="template" id="AboutMe"></h2>
+                    <p class="template" id="Description"></p>
                     <div>
                         <h3 class="template">
                             Skills
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </section>
-            <section id="projects">
+            <section id="projects" class="nascosto">
                 <div>
                     <h2 class="template">Projects</h2>
                     <ul>
@@ -103,7 +103,7 @@
                     </ul>
                 </div>
             </section>
-            <section id="contacts">
+            <section id="contacts" class="nascosto">
                 <div>
                     <h2 class="template">Contacs</h2>
                     <p class="template">Puoi scrivermi su i social networks</p>
