--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
             <section id="about" class="nascosto">
                 <div>
                     <h2 class="template" id="AboutMe"></h2>
-                    <p class="template" id="Description"></p>
+                    <p class="template" id="Description1"></p>
+                    <p class="template" id="Description2"></p>
+                    <p class="template" id="Description3"></p>
+                    <p class="template" id="Description4"></p>
                     <div>
-                        <h3 class="template">
-                            Skills
+                        <h3 class="template" id="Skills">
                         </h3>
                         <ul>
                             <li class="template">lista</li>
@@ -82,7 +84,7 @@
             </section>
             <section id="projects" class="nascosto">
                 <div>
-                    <h2 class="template">Projects</h2>
+                    <h2 class="template" id="Projects"></h2>
                     <ul>
                         <li>
                             <h1 class="template">___________________Possibile link al progetto(github o demo)</h1>
@@ -105,7 +107,7 @@
             </section>
             <section id="contacts" class="nascosto">
                 <div>
-                    <h2 class="template">Contacs</h2>
+                    <h2 class="template" id="Contacts"></h2>
                     <p class="template">Puoi scrivermi su i social networks</p>
                     <p class="template">form per mandare direttamente una mail dal sito</p>
                 </div>
@@ -117,7 +119,7 @@
             <p class="template">Ciao sono io</p>
         </div>
         <div>
-            <h3 class="template">Social</h3>
+            <h3>Social Networks</h3>
             <ul>
                 <li>Linkedin</li>
                 <li>Github</li>
