finish section about

--- a/index.html
+++ b/index.html
@@ -65,19 +65,32 @@
                 </div>
             </section>
             <section id="about" class="nascosto">
-                <div>
-                    <h2 class="template" id="AboutMe"></h2>
-                    <p class="template" id="Description1"></p>
-                    <p class="template" id="Description2"></p>
-                    <p class="template" id="Description3"></p>
-                    <p class="template" id="Description4"></p>
-                    <div>
-                        <h3 class="template" id="Skills">
-                        </h3>
-                        <ul>
-                            <li class="template">lista</li>
-                            <li class="template">delle</li>
-                            <li class="template">skills</li>
+                <div class="px-4">
+                    <div class="justify-content-center">
+                        <h2 class="template pt-5" id="AboutMe"></h2>
+                        <p class="template py-2" id="Description1"></p>
+                        <p class="template py-2" id="Description2"></p>
+                        <p class="template py-2" id="Description3"></p>
+                        <p class="template py-2" id="Description4"></p>
+                        <p class="template py-2" id="Description5"></p>
+                    </div>
+                    <div class="col-lg-4" id="skillsList">
+                        <h2 class="template pt-3" id="Skills"></h2>
+                        <ul class="justify-content-between flex-wrap">
+                            <li>Java</li>
+                            <li>Javascript</li>
+                            <li>Python</li>
+                            <li>MySql</li>
+                            <li>PHP</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>C</li>
+                            <li>C++</li>
+                            <li>Git</li>
+                            <li>BitBucket</li>
+                            <li>Laravel</li>
+                            <li>JUnit</li>
+                            <li>Spring Framework</li>
                         </ul>
                     </div>
                 </div>
