add all the strings and their traduction, add some new icons

--- a/index.html
+++ b/index.html
@@ -100,20 +100,20 @@
                     <h2 class="template" id="Projects"></h2>
                     <ul>
                         <li>
-                            <h1 class="template">___________________Possibile link al progetto(github o demo)</h1>
-                            <div class="project">
-                                <img src="" alt="">
-                                <h3 class="template">titolo progetto</h3>
-                                <p class="template">breve descrizione del progetto</p>
-                            </div>
+                            <a href="https://github.com/melissamagistri/BookaMeli">BookaMeli</a>
+                            <p class="template" id="BookaMeli"></p>
                         </li>
                         <li>
-                            <h1 class="template">___________________Possibile link al progetto(github o demo)</h1>
-                            <div class="project">
-                                <img src="" alt="">
-                                <h3 class="template">titolo progetto</h3>
-                                <p class="template">breve descrizione del progetto</p>
-                            </div>
+                            <a href="https://github.com/FedericoGuidazzi/MenuManager">Menu Manager</a>
+                            <p class="template" id="MenuManager"></p>
+                        </li>
+                        <li>
+                            <a href="https://github.com/FedericoGuidazzi/Esp32_OpenDoorProject">Esp32_OpenDoorProject</a>
+                            <p class="template" id="Esp32_OpenDoorProject"></p>
+                        </li>
+                        <li>
+                            <a href="https://github.com/FedericoGuidazzi/Mushrooms_Edible">Mushrooms Edible</a>
+                            <p class="template" id="MushroomsEdible"></p>
                         </li>
                     </ul>
                 </div>
@@ -121,23 +121,15 @@
             <section id="contacts" class="nascosto">
                 <div>
                     <h2 class="template" id="Contacts"></h2>
-                    <p class="template">Puoi scrivermi su i social networks</p>
-                    <p class="template">form per mandare direttamente una mail dal sito</p>
+                    <p class="template" id="ContactsDescription"></p>
+                    <ul>
+                        <li><a href="" id="email"><img src="./resources/envelope.svg" alt="Email"></a></li>
+                        <li><a href="https://www.linkedin.com/in/federico-guidazzi-025555218/"><img src="./resources/linkedin.svg" alt="Linkedin"></a></li>
+                        <li><a href="https://github.com/FedericoGuidazzi"><img src="./resources/github.svg" alt="Github"></a></li>
+                        <li><a href="https://www.instagram.com/fedeguidazzi/"><img src="./resources/instagram.svg" alt="Instagram"></a></li>
+                    </ul>
                 </div>
             </section>
-    </div>
-    <footer>
-        <div>
-            <h3>Federico Guidazzi</h3>
-            <p class="template">Ciao sono io</p>
         </div>
-        <div>
-            <h3>Social Networks</h3>
-            <ul>
-                <li>Linkedin</li>
-                <li>Github</li>
-            </ul>
-        </div>
-    </footer>
     </body>
 </html>
